fixed center alignment

--- a/main.css
+++ b/main.css
@@ -44,8 +44,7 @@ section { padding: 30px 0 ; border-bottom: 1px solid silver;}
 #services .sticky [data-toggle="collapse"]:hover { color: hsl(0, 0%, 75%); }
 .container > h2 {
 	margin-bottom: 2em;
-	display      : table;
-	margin       : 1em auto;
+	text-align: center;
 }
 
 /*.container > h2:after {
